[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2024"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/run/current-system/sw/bin/mold"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
